Simplified and formatted some code.
Signed-off-by: Juergen Fickel <juergen.fickel@bosch-si.com>